--- a/fr/projects/index.html
+++ b/fr/projects/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../../img/enciboy.png">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../css/style.css">
     <title>Louis Encinas</title>
@@ -19,8 +20,6 @@
             </div>
 
             <div id="dev_navbar">
-
-                <div id="dev_navbar_outline"></div>
 
                 <div class="cross" id="navbar_close">
                     <div class="cross_line1"></div>
